--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "nodemon": "^3.0.2",
     "sharp": "^0.33.1"
   }
 }
